--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.5.1
+transformers==4.44.2
+sentence-transformers==3.0.1
+torch>=2.3.0
+streamlit==1.37.1
+plotly==5.22.0
+pymupdf==1.24.10
+langdetect==1.0.9
+deep-translator==1.11.4
+reportlab==4.2.5
